--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build:chrome": "tsc -b && vite build --mode chrome",
+    "build:firefox": "tsc -b && vite build --mode firefox",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.14",
+    "@types/chrome": "^0.1.24",
     "@types/firefox-webext-browser": "^120.0.5",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
