--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,11 +21,6 @@
 		"<all_urls>"
 	],
 
-	"background": {
-		"scripts": ["background/background.js"],
-		"type": "module"
-	},
-
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
@@ -42,6 +37,11 @@
 
 	"action": {
 		"default_popup": "src/popup/popup.html"
+	},
+
+	"options_ui": {
+		"page": "src/settings/settings.html",
+		"open_in_tab": true
 	}
 }
 
