--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,16 @@
 {
 	"manifest_version": 3,
-	"name": "Kuraji - 「クラジ」 Automatic Japanese Subtitle Finder",
+	"name": "Kuraji - 「クラジ」",
 	"version": "0.1",
 	"author": "colechiodo.cc",
 	"description": "Automatically searches for and loads Japanese subtitles for your videos.",
+
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "colechiodo@gmail.com",
+			"strict_min_version": "109.0"
+		}
+	},
 
 	"icons": {
 		"16": "assets/icons/cc-icon-white.png",
