--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,8 +20,7 @@
 
 	"permissions": [
 		"storage",
-		"activeTab",
-		"scripting"
+		"activeTab"
 	],
 
 	"host_permissions": [
@@ -31,7 +30,9 @@
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
-			"js": ["content/content.js"]
+			"js": ["content/content.js"],
+			"all_frames": true,
+			"match_about_blank": true
 		}
 	],
 
