--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,13 @@
 {
 	"manifest_version": 3,
 	"name": "Kuraji - 「クラジ」",
-	"version": "0.3.0",
+	"version": "0.4.0",
 	"author": "colechiodo.cc",
 	"description": "Automatically searches for and loads Japanese subtitles for your videos.",
 
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "colechiodo.cc",
+			"id": "colechiodo@gmail.com",
 			"strict_min_version": "112.0"
 		}
 	},
